[package]
name = "tarsk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
automerge = "0.1.0"
chrono = "0.4.22"
crossterm = "0.25.0"
hyper = "0.14.23"
lazy_static = "1.4.0"
reqwest = "0.11.12"
serde = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tui = "0.19.0"
uuid = { version = "1.2.1", features = ["v4"] }
warp = "0.3.3"
